--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^10.0.3",
+    "babel-plugin-inline-react-svg": "^1.1.2",
     "next": "10.0.3",
+    "next-compose-plugins": "^2.2.1",
+    "next-images": "^1.6.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "styled-components": "^5.2.1"
