--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest --watch",
+    "coverage": "jest --coverage"
   },
   "dependencies": {
     "@next/bundle-analyzer": "^10.0.3",
@@ -18,11 +20,17 @@
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.3",
+    "@testing-library/react-hooks": "^5.0.0",
+    "@testing-library/user-event": "^12.6.2",
+    "@types/jest": "^26.0.20",
     "@types/node": "^14.14.13",
     "@types/react": "^17.0.0",
     "@types/styled-components": "^5.1.5",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.1",
+    "babel-jest": "^26.6.3",
     "babel-plugin-styled-components": "^1.12.0",
     "eslint": "^7.15.0",
     "eslint-config-prettier": "^7.0.0",
@@ -32,7 +40,15 @@
     "eslint-plugin-prettier": "^3.2.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.21.5",
+    "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "typescript": "^4.1.3"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/page/**/*.tsx",
+      "src/components/**/*.tsx",
+      "src/hooks/**/*.tsx"
+    ]
   }
 }
